Some small language fixes

--- a/html/precalc/calculator.html
+++ b/html/precalc/calculator.html
@@ -703,7 +703,7 @@ $( document ).ready(function() {
 
 
 <h5>Example</h5>
-<p>A formula from statistics to compute the variance of binomial random variable for parameters <span class="math">$p$</span> and <span class="math">$n$</span> is <span class="math">$\sqrt{p (1-p)/10}$</span>. Compute this value for <span class="math">$p=1/4$</span> and <span class="math">$n=10$</span>.</p>
+<p>A formula from statistics to compute the variance of binomial random variable for parameters <span class="math">$p$</span> and <span class="math">$n$</span> is <span class="math">$\sqrt{p (1-p)/n}$</span>. Compute this value for <span class="math">$p=1/4$</span> and <span class="math">$n=10$</span>.</p>
 
 
 <pre class='hljl'>
